--- a/app/html/index.html
+++ b/app/html/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="app.css" type="text/css" media="all" />
   </head>
   <body id="app">
-    <script type="text/javascript" src="/js/libs.js"></script>
-    <script type="text/javascript" src="/js/app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
