--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Dungeon Crawler</title>
   </head>
-  <body id="app">
+  <body>
     <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
 </html>
