--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>Dungeon Crawler</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>DCG</title>
   </head>
   <body>
-    <script type="text/javascript" src="dist/bundle.js"></script>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
   </body>
 </html>
